--- a/views/partials/bas.html
+++ b/views/partials/bas.html
@@ -18,6 +18,7 @@
       <thead>
         <tr>
           <th>Period</th>
+          <th style="text-align:center;">Submitted</th>
           <th>Invoice total</th>
           <th>Invoice GST</th>
           <th>Company income</th>
