--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -20,6 +20,10 @@
           <label>Superannuation rate (%)</label>
           <input type="number" id="set-super-rate" min="0" step="0.1" />
         </div>
+        <div id="payg-rate-col" style="display:none;">
+          <label>PAYG Instalment rate (%)</label>
+          <input type="number" id="set-payg-rate" min="0" max="100" step="0.1" />
+        </div>
         <div id="public-holiday-state-col" style="display:none;">
           <label>State/Territory</label>
           <select id="set-public-holiday-state">
